fix: double scroll bar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -56,9 +56,13 @@ h3 {
 // utils ***********************
 
 // used to see use fullscreen without footer
-.content-wrapper {
-  min-height: calc(100vh - 70px);
-  max-height: calc(100vh - 70px);
+.border-image {
+  top: 0;
+  max-height: 100vh;
+  min-height: 100vh;
+  @apply rounded-r-sm;
+  @apply sticky;
+  @apply object-cover;
 }
 
 // baseline FROM ************************
@@ -103,5 +107,5 @@ h3 {
 // CARD *************************
 .card {
   @apply border-2 border-primary rounded shadow;
-  @apply mx-4 mt-4 px-8 py-4;
+  @apply mx-4 my-4 px-8 py-4;
 }
